<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto"  app:cnb_unselectedColor="#fff">

    <item
        android:id="@+id/discover"
        android:icon="@drawable/info2"
        android:title="@string/about_us"
        app:cnb_backgroundColor="@color/white"
        app:cnb_iconColor="#000"
        app:cnb_textColor="#000" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/white"
        app:cnb_iconColor="#000"
        app:cnb_textColor="#000" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/morenavi"
        android:title="@string/more"
        app:cnb_backgroundColor="@color/white"
        app:cnb_iconColor="#000"
        app:cnb_textColor="#000" />
</menu>