<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".ContactForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardad2"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="10"
                            android:orientation="vertical">

                            <TextView
                                android:background="@drawable/gnt_rounded_corners_shape"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:id="@+id/ad2"
                                android:layout_height="wrap_content"
                                android:text="Advertisement"
                                android:padding="10dp"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/gnt_ad_green"
                                android:textStyle="bold"
                                android:textSize="@dimen/gnt_ad_indicator_text_size"/>

                            <com.google.android.gms.ads.AdView
                                android:id="@+id/adView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                ads:adSize="BANNER"
                                ads:adUnitId="@string/banner_ad_unit_id" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!--            <LinearLayout-->
                <!--                android:id="@+id/banner_container"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_alignParentBottom="true"-->
                <!--                android:orientation="vertical">-->
                <!--            </LinearLayout>-->
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />




            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="14sp" />



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />




            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="180dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>