<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".SettingFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/a_family_of_learning"
        android:textSize="30sp"
        app:fontFamily="@font/baloo"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/learn_with_a_new_way"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/book" />
</LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

        <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_height="0dp">
<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="80dp"-->
<!--        android:clickable="true"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:focusable="true"-->
<!--        android:id="@+id/coming_soon"-->
<!--        android:foreground="?android:attr/selectableItemBackground"-->
<!--        >-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical">-->

<!--            <Switch-->
<!--                android:id="@+id/nightmode"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:fontFamily="@font/baloo"-->
<!--                android:layout_gravity="right"-->
<!--                android:layout_marginEnd="40sp"-->
<!--                tools:ignore="RtlHardcoded" />-->

<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal">-->


<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/dark_mode"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold" />-->

<!--        </LinearLayout>-->
<!--    </androidx.cardview.widget.CardView>-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clickable="true"
        android:layout_marginTop="2dp"
        android:id="@+id/privacy"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:id="@+id/term"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/term_conditions"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                android:id="@+id/thanks"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Special Thanks To"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:id="@+id/suggest"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/give_your_suggestion"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
</LinearLayout>