<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00008577"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/a_family_of_learning"
            android:textSize="30sp"
            app:fontFamily="@font/baloo"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/learn_with_a_new_way"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            app:lottie_rawRes="@raw/family"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:id="@+id/chapter"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"

                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bus"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/chapters"
                        android:textSize="20sp"
                        app:fontFamily="@font/baloo" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/bus"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/chapter" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                android:id="@+id/notes"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="Solved Exercise"
                        android:textSize="18sp"
                        app:fontFamily="@font/baloo" />

                    <com.airbnb.lottie.LottieAnimationView
                        app:lottie_rawRes="@raw/readabook"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        android:id="@+id/imageView3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                android:id="@+id/quiz"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bus1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/quiz"
                        android:textSize="20sp"
                        app:fontFamily="@font/baloo" />

                    <com.airbnb.lottie.LottieAnimationView
                        app:lottie_rawRes="@raw/quiz"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        android:id="@+id/bus1"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                android:id="@+id/video"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/train"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/video_lectures"
                        android:textSize="18sp"
                        app:fontFamily="@font/baloo" />

                    <com.airbnb.lottie.LottieAnimationView
                        app:lottie_rawRes="@raw/video"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        android:id="@+id/train"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:elevation="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:text="@string/a_community_of_lifelong_learners_responsible_global_citizens_and_champions_of_our_own_success"
                        android:textSize="17sp"
                        android:textColor="#000"
                        app:fontFamily="@font/baloo"
                        />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>